2006-08-09  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/: Change section names with "LAN" to "Lan" for
	backwards consistency.
	
2006-08-08  Albert Chu <chu11@llnl.gov>

	ipmi-sensors and ipmi-sel convenience code cleanup and re-org in
	preparation for code fixes in ipmi-sel.

	* ipmi-sensors/src/ipmi-sdr-api.h,
	ipmi-sensors/src/ipmi-sdr-api.c: Move to common/src/ as common
	lib:

	* ipmi-sensors/src/Makefile.am, common/src/Makefile.am: Adjust
	appropriately for use.

	* common/src/ipmi-sensor-api.c, common/src/ipmi-sensor-api.h,
	common/src/ipmi-sdr-api.h, common/src/ipmi-sdr-api.c: Move SDR
	related defines and functions from ipmi-sensor-api.[ch] to
	ipmi-sdr-api.[ch].  General code cleanup throughout.

	* common/src/ipmi-sdr-api.c: Globally add more debugging info.

	* common/src/ipmi-sdr-api.c (get_sdr_cache_filename): Fix sdr
	cache filename corner case which can exist in environments with
	NFS mounted home directories.

	* libfreeipmi/src/ipmi-locate-acpi-spmi.c
	(ipmi_physical_address_valid): New function.

	* libfreeipmi/src/ipmi-locate-acpi-spmi.c (ipmi_ioremap): Use
	ipmi_physical_address_valid appropriately.

	* ipmipower/: Begin support of --supermicro-2-0-session option.
	
2006-08-07  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors.8.pre.in: Add debug flag option.

	* ipmi-sensors/src/ipmi-sensors.c (main): Add OPENIPMI driver
	support.

	* ipmi-sensors/src/sensors-simple-display.c
	(sensors_display_simple_event_only_record): Removed unused function.

	* ipmi-sensors/src/ipmi-sensors-argp.c,
	ipmi-sensors/src/ipmi-sensors-argp.h,
	ipmi-sensors/src/ipmi-sensors-utils.c,
	ipmi-sensors/src/ipmi-sensors-utils.h,
	ipmi-sensors/src/ipmi-sensors.c: Fix unsigned int use bug that
	broke --sensors option.  Use unsigned ints for sensors list and
	sensors list length.

	* ipmi-sensors/src/ipmi-sensors.c (display_sensor_list,
	display_group_sensors): Don't get sensor reading unless it's
	required by output choice.
