@@ -43,10 +43,12 @@ ipmi_locate (ipmi_interface_type_t type, struct ipmi_locate_info *info)
 {
   static ipmi_locate_func things_to_try[] =
     {
+#if 0
       ipmi_locate_dmidecode_get_dev_info, 
       ipmi_locate_smbios_get_dev_info,
       ipmi_locate_acpi_spmi_get_dev_info,
       ipmi_locate_pci_get_dev_info,
+#endif
       ipmi_locate_defaults_get_dev_info,
       NULL
     };
